--- a/ClientApp/angular.json
+++ b/ClientApp/angular.json
@@ -33,7 +33,9 @@
               "src/styles.css"
 
             ],
-            "scripts": []
+            "scripts": [
+
+            ]
           },
           "configurations": {
             "production": {
@@ -106,7 +108,7 @@
 
             ],
             "scripts": [
-              "src/assets/map/Qgis2threejs.js"
+             
             ]
           }
         },
